[gd_scene load_steps=5 format=3 uid="uid://main_game_scene"]

[ext_resource type="Script" path="res://scripts/world/scrolling_background.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://player_scene" path="res://scenes/player/player.tscn" id="2"]
[ext_resource type="Script" path="res://scripts/autoload/enemy_spawner.gd" id="3"]
[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="4"]

[node name="Main" type="Node2D"]

[node name="ScrollingBackground" type="Node2D" parent="."]
script = ExtResource("1")
scroll_speed = 50.0

[node name="ColorRect1" type="ColorRect" parent="ScrollingBackground"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="ColorRect2" type="ColorRect" parent="ScrollingBackground"]
offset_left = 1152.0
offset_right = 2304.0
offset_bottom = 648.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(200, 324)

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource("3")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("4")

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="WaveLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "Wave: 1"

[node name="HealthBar" type="ProgressBar" parent="HUD/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenu" type="Control" parent="HUD"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="HUD/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseTitle" type="Label" parent="HUD/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="HUD/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Resume (ESC)"

[node name="QuitButton" type="Button" parent="HUD/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Quit to Menu"

[node name="GameOverScreen" type="Control" parent="HUD"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="HUD/GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverTitle" type="Label" parent="HUD/GameOverScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="HUD/GameOverScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="HUD/GameOverScreen/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="HUD/GameOverScreen/VBoxContainer"]
layout_mode = 2
text = "Quit to Menu"
